# HMPy

./: CMakeLists.txt  Classifier.html  Creator.html  GestureModel.html  README.md  Recognition.html  genindex.html  index.html  objects.inv  package.xml  py-modindex.html  search.html  searchindex.js  setup.py
_sources/: index.txt
docs/: Makefile  make.bat
docs/source/: Classifier.rst  Creator.rst  GestureModel.rst  Recognition.rst  conf.py  index.rst
src/: Aligment.py  Classifier.py  Creator.py  GestureModel.py  Recognition.py  test1.py  test_from_files.py
src/Models/A1/data/: mod(1).txt  mod(2).txt  mod(3).txt  mod(4).txt  mod(5).txt  mod(6).txt
src/Models/A1/models/: MuBody.txt  MuGravity.txt  SigmaBody.txt  SigmaGravity.txt
src/Models/A1/raw/: acc(1).txt
src/Models/B1/data/: mod(1).txt  mod(11).txt  mod(12).txt  mod(13).txt  mod(14).txt  mod(17).txt  mod(2).txt  mod(20).txt  mod(4).txt  mod(9).txt
src/Models/B1/models/: MuBody.txt  MuGravity.txt  SigmaBody.txt  SigmaGravity.txt
src/Models/B1/raw/: acc(10).txt  (+4 more)
src/Tests/: acc(2).txt  t3.txt
src/borrar/: Classifier copia.py  generateModel_GUUI.py  newmodel.py
src/borrar/modificar/: hmpy.py  hmpy_icra.py  online_classifier.py  test_demo.py  test_demo_v2.py
src/borrar/test/: newmodel.py  newmodel2.py
src/borrar/validation/: AP2.txt  acc(2).txt  acc(4).txt  mix1.txt
src/preprocessing/: GUI.py  preGUI.py  seeData.py
src/validation/: acc(1).txt  acc(3).txt  mix.txt  t1.txt  t2.txt  t3.txt
src/validation/eliminar/: AP1.txt  P1.txt  S1_1.txt  S2_1.txt  acc(1).txt  acc(3).txt  mix3.txt  raw.txt
(+318 files in other folders)
